configuracion deploy vercel

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechLab</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="#" type="image/x-icon">
 </head>
+
 <body>
     <header>
         <nav>
@@ -30,7 +33,8 @@
                 Esta es una aplicación de demostración para gestionar un inventario de productos tecnológicos.
             </p>
             <p>
-                Puedes registrarte para obtener una cuenta, iniciar sesión y comenzar a añadir, editar y eliminar tus propios productos.
+                Puedes registrarte para obtener una cuenta, iniciar sesión y comenzar a añadir, editar y eliminar tus
+                propios productos.
             </p>
             <p>
                 El backend está construido con Node.js, Express y Firebase. El frontend es HTML, CSS y JavaScript puro.
@@ -43,7 +47,8 @@
         <h2>Login</h2>
         <form id="login-form" method="dialog">
             <input type="text" id="login-username" placeholder="Usuario" autocomplete="username" required>
-            <input type="password" id="login-password" placeholder="Contraseña" autocomplete="current-password" required>
+            <input type="password" id="login-password" placeholder="Contraseña" autocomplete="current-password"
+                required>
             <button type="submit">Entrar</button>
             <button type="button" id="close-login-dialog">Cerrar</button>
         </form>
@@ -63,4 +68,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
